--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -433,10 +433,11 @@ p.project-preview__tags, p.project-preview__client {
     }
 }
 .home-links__wrapper {
-    margin-right: $spacing-unit / 2;
+    margin-right: $spacing-unit / 1.75;
+    float: left;
 
-    @media (min-width: 1100px) {
-        margin-right: 0;
+    @media (min-width: 768px) {
+        margin-right: $spacing-unit;
     }
 }
 span.home-links__link {
@@ -476,7 +477,7 @@ p.home-links__link, span.home-links__link {
 .page--home__links {
     display: flex;
     @media (min-width: 768px) {
-        width: 50%;
+        margin-right: $spacing-unit;
         float: left;
     }
     @media (min-width: 960px) {
